rename brand and logo, fix mobile overflow issues

--- a/app/globals.css
+++ b/app/globals.css
@@ -118,6 +118,7 @@
   body {
     @apply bg-background text-foreground font-sans antialiased;
     font-size: 14px;
+    overflow-x: hidden;
   }
   html {
     @apply font-sans bg-background;
